# Virtual workspace manifest. Layer crates (crates/*) are extracted as the PoC
# ladder matures — see .claude/roadmap/plan.md §9; milestone binaries live
# under poc/.
[workspace]
resolver = "3"
members = [
	"crates/pty",
	"poc/poc0-pty",
]

# Shared metadata — members inherit with `field.workspace = true`.
[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ZelAnton/tessmux"
# Minimum Supported Rust Version. 1.85 is the edition-2024 floor; raise it when
# you adopt a newer language/std feature. The `msrv` CI job verifies it — keep
# the two in sync.
rust-version = "1.85"

# ---------------------------------------------------------------------------
# Dependencies
#
# Convention (see AGENTS.md "Dependency management"): this workspace fixes NO
# allow-list of crates. Add whatever the project needs — but give every new
# dependency an inline comment explaining *why* it's here and what it's used
# for, so the next reader (human or agent) doesn't have to guess. Pin major
# versions, prefer well-maintained crates, and keep Cargo.lock committed.
# Shared versions live here in [workspace.dependencies]; members reference
# them with `dep = { workspace = true }`.
#
# Example:
#   serde = { version = "1", features = ["derive"] }  # (de)serialize config
# ---------------------------------------------------------------------------
[workspace.dependencies]
# Internal layer crates, consumed by milestone binaries via workspace = true.
tessmux-pty = { path = "crates/pty" }
# L0: cross-platform PTY abstraction; ConPTY on Windows without WSL (roadmap §2).
portable-pty = "0.8"
# Error handling in milestone binaries; library crates use thiserror instead.
anyhow = "1"
# Typed error enums at library boundaries (L0+): consumers branch on failure
# mode (e.g. kill refused vs kill failed), which anyhow cannot express.
thiserror = "2"
# Raw mode + terminal::size() for wiring our *own* console to the PTY; not used
# for rendering (the GUI layers pick their own stack later, roadmap §5).
# Only the platform backend feature, no events/bracketed-paste.
crossterm = { version = "0.29", default-features = false, features = ["windows"] }
